fixed a bug where nonselected books would get stuck on white or grey and made search result exit button fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -346,11 +346,19 @@ Search
 .search-lib input:focus {
     outline: 3px solid rgb(224, 223, 223);
 }
-
+/* 
 .x-results {
     position: absolute;
     right: 6px;
     top: 1px;
+    font-size: 1rem;
+} */
+
+
+.x-results {
+    position: fixed;
+    right: 45px;
+    top: 55px;
     font-size: 1rem;
 }
 
